crates/cuda-macros/tests/pass/kernels/path_helper.rs
// SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

pub const PATH_HELPER: u32 = 3;
